syntax = "proto3";

option csharp_namespace = "Api";

package main;

service PageService {
  rpc GetPage (PageServiceGetPageRequest) returns (PageServiceGetPageResponse);
}

message PageServiceGetPageRequest {
  int32 page_id = 1;
}

message PageServiceGetPageResponse {
  Page page = 1;
}

message Page {
  int32 id = 1;
  string title = 2;
  string content = 3;
  string author_id = 4;
  int64 created_at = 5;
}
